examples/ISO_EBNF.ebnf
syntax = { rule | comment } ;

rule = identifier, "=", expression, ";" ;

expression  = exception ;
exception = choice, {"-", choice } ;
choice = term, { "|", term } ;
term = factor, { ",", factor } ;
factor = { integer, "*" }, primary ;

primary = identifier
        | terminal
        | optional
        | repetition
        | group 
        | character_definition ;

optional = "[", expression, "]" ;
repetition = "{", expression, "}" ;
group = "(", expression, ")" ;

character_definition = hexadecimal_number | character_range ;
character_range = hexadecimal_number, "..", hexadecimal_number ;

comment = "(*", { character | space  }, "*)" ;

lexical_definition = "%TOKENS%", { rule | comment } ;

%TOKENS%

identifier = letter, { letter | digit } ;

terminal = single_quote_terminal_string | double_quote_terminal_string ;
single_quote_terminal_string  = "'", { single_quote_terminal_character }, "'" ;
double_quote_terminal_string  = '"', { double_quote_terminal_character }, '"' ;

single_quote_terminal_character = character - #27 | whitespace ;
double_quote_terminal_character = character - #22 | whitespace ;

character  =  #0 .. #FFFF - #9 - #A - #D - #20 ;

integer    = digit, { digit } ;

letter     = "A" | "B" | "C" | "D" | "E" | "F" | "G"
           | "H" | "I" | "J" | "K" | "L" | "M" | "N"
           | "O" | "P" | "Q" | "R" | "S" | "T" | "U"
           | "V" | "W" | "X" | "Y" | "Z"
           | "a" | "b" | "c" | "d" | "e" | "f" | "g"
           | "h" | "i" | "j" | "k" | "l" | "m" | "n"
           | "o" | "p" | "q" | "r" | "s" | "t" | "u"
           | "v" | "w" | "x" | "y" | "z" ;

digit      = "0" | "1" | "2" | "3" | "4"
           | "5" | "6" | "7" | "8" | "9" ;

hexadecimal_number = "#", { hexadecimal_character } ;
hexadecimal_character = digit
                      | "A" | "B" | "C" | "D" | "E" | "F"
                      | "a" | "b" | "c" | "d" | "e" | "f" ;

whitespace =  #9 | #A | #D | #20 ;
